127.5: the host the allowlist is asked about is a strictly parsed one
HttpApi.httpHost parses through URI.create(url).toURL(). It is the site the
task is named after: what it returns is req.host, the host requireNetwork
measures against the consent record, so a lenient parse there was a lenient
parse of the whole gate. Its catch is widened to MalformedURLException |
IllegalArgumentException -- URI.create raises the unchecked one, and so does
toURL on a relative url with no protocol to open -- and still throws the
LuaError naming the url, falling back to the exception's class name where
getMessage() is null so the refusal can never read "null".

LuaHttp takes the other two: URI.create(url).toURL() at the entry, and
u.toURI().resolve(loc).toURL() for a redirect's relative Location, with both
catches widened (URISyntaxException added at the redirect) and both still
answering Result.fail("malformed url: ...").

Where it went differently from the plan: the redirect's scheme check was
already in force and none was added. The loop is parse -> validateHop ->
openConnection, and a redirect re-enters at the top, so validateHop's
http/https refusal already runs on every hop before the (HttpURLConnection)
cast -- a Location naming another scheme fails there, not with a
ClassCastException on the pool thread. The invariant is recorded in a comment
at the continue rather than duplicated as a second test.

The three together were the last of the build's [deprecation] warnings; a
clean rm -rf build/classes compile leaves one [removal] warning, ThreadDeath
in AddonManager, which is a different lint and outside this feature.

http.md gains the paragraph the change is visible through: the parse is RFC
3986, what it refuses, that the refusal names the url, and that the host it
produces is the one the approved allowlist is asked about. One pre-existing
142-column line on that page rewrapped to the 110 ceiling.

The suite declares no permission and no host -- every check lands on
:request